--- a/index.html
+++ b/index.html
@@ -16,15 +16,36 @@
           Developer."
         </h1>
         <p>
-          I have confidence in myself. I will be successful one day inshallah. 
-          Everything <br> can be achieved with hard work. Hard workers never fail
+          I have confidence in myself. I will be successful one day inshallah.
+          Everything <br />
+          can be achieved with hard work. Hard workers never fail
         </p>
-        <button ><a class="btn" href="">Contact with me</a></button>
+        <button><a class="btn" href="">Contact with me</a></button>
       </div>
     </header>
-      <!-- ==--==--==--=--==--== Banner Section End Here--==--==--==--==--==--== -->
-       <main>
-        <!-- ==--=--==--==--==--==--==- Why Web Development Start Here??-==--=---==--==---==--==--=== -->
-       </main>
+    <!-- ==--==--==--=--==--== Banner Section End Here--==--==--==--==--==--== -->
+    <main>
+      <!-- ==--=--==--==--==--==--==- Web Development Start Here??-==--=---==--==---==--==--=== -->
+      <section class="Development-section">
+        <div class="content">
+          <h1>Why Web Development??</h1>
+          <p>
+            My childhood dream is web development. I have a special love for web 
+            development. <br> Wants to be a good developer, wants to move forward
+            with his dreams
+          </p>
+        </div>
+        <div class="box-container">
+            <div class="box-text-content">
+                <h2>I will Do Coding and Change The World</h2>
+                <p>I will be a good developer. Create new projects and change the world</p>
+                <button class="btn-primary">Learn More</button>
+            </div>
+            <div class="box-img">
+                <img src="assets/Layer_1.png" alt="">
+            </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
