--- a/index.html
+++ b/index.html
@@ -30,21 +30,59 @@
         <div class="content">
           <h1>Why Web Development??</h1>
           <p>
-            My childhood dream is web development. I have a special love for web 
-            development. <br> Wants to be a good developer, wants to move forward
-            with his dreams
+            My childhood dream is web development. I have a special love for web
+            development. <br />
+            Wants to be a good developer, wants to move forward with his dreams
           </p>
         </div>
+
         <div class="box-container">
-            <div class="box-text-content">
-                <h2>I will Do Coding and Change The World</h2>
-                <p>I will be a good developer. Create new projects and change the world</p>
-                <button class="btn-primary">Learn More</button>
-            </div>
-            <div class="box-img">
-                <img src="assets/Layer_1.png" alt="">
-            </div>
+          <!-- =-=-=-=-=-=box-container-1=-=-=-=-=-=- -->
+          <div class="box-text-content">
+            <h2>I will Do Coding and Change The World</h2>
+            <p>
+              I will be a good developer. Create new projects and
+              change the world
+            </p>
+            <button class="btn-primary">Learn More</button>
+          </div>
+          <div class="box-img">
+            <img src="assets/Layer_1.png" alt="" />
+          </div>
         </div>
+        <!-- =-=-=-=-=-=box-container-1 Ene Here =-=-=-=-=-=- -->
+
+        <!-- =-=-=-=-=-=box-container-2 Start Here =-=-=-=-=-=- -->
+        <div class="box-container">
+          <div class="box-img">
+            <img src="assets/Group 3.png" alt="" />
+          </div>
+          <div class="box-text-content">
+            <h2>I will Do Coding and Change The World</h2>
+            <p>
+              I will be a good developer. Create new projects and
+              change the world
+            </p>
+            <button class="btn-primary">Learn More</button>
+          </div>
+        </div>
+        <!-- =-=-=-=-=-=box-container-2 End Here =-=-=-=-=-=- -->
+
+        <!-- =-=-=-=-=-=box-container-3 Start Here =-=-=-=-=-=- -->
+        <div class="box-container">
+          <div class="box-text-content">
+            <h2>I will Do Coding and Change The World</h2>
+            <p>
+              I will be a good developer. Create new projects and
+              change the world
+            </p>
+            <button class="btn-primary">Learn More</button>
+          </div>
+          <div class="box-img">
+            <img src="assets/Group 4.png" alt="" />
+          </div>
+        </div>
+        <!-- =-=-=-=-=-=box-container-3 End Here=-=-=-=-=-=- -->
       </section>
     </main>
   </body>
