Inspiration-secti complete

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <!-- ==--=--==--==--==--==--==- Web Development Start Here??-==--=---==--==---==--==--=== -->
       <section class="Development-section">
         <div class="content">
-          <h1>Why Web Development??</h1>
-          <p>
+          <h1 class="title">Why Web Development??</h1>
+          <p class="description">
             My childhood dream is web development. I have a special love for web
             development. <br />
             Wants to be a good developer, wants to move forward with his dreams
@@ -83,6 +83,33 @@
           </div>
         </div>
         <!-- =-=-=-=-=-=box-container-3 End Here=-=-=-=-=-=- -->
+      </section>
+
+      <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration=-=-=-=-=-=-=-=-=-=-=-=- -->
+      <section class="Inspiration-section">
+        <h1 class="title">My Inspiration</h1>
+        <p class="description">
+          My childhood dream is web development. I have a special love for web
+          development. <br />
+          Wants to be a good developer, wants to move forward with his dreams
+        </p>
+        <div class="video">
+          <iframe
+            width="1000px"
+            height="500px" 
+            src="https://www.youtube.com/embed/-RVlkAYAcRA?si=S5SInzgdx5F6PvW0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+      <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- -->
+
+      <section class="skills-section">
+        <h1></h1>
       </section>
     </main>
   </body>
