--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="video">
           <iframe
             width="1000px"
-            height="500px" 
+            height="500px"
             src="https://www.youtube.com/embed/-RVlkAYAcRA?si=S5SInzgdx5F6PvW0"
             title="YouTube video player"
             frameborder="0"
@@ -107,9 +107,39 @@
         </div>
       </section>
       <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- -->
-
-      <section class="skills-section">
-        <h1></h1>
+      <!-- =-==-=-=-=-=-=-=-=My Current Target=-=-=-=-=-=-=- -->
+      <section class="target-section">
+        <h1 class="title">My Current Target</h1>
+        <p class="description">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text.
+        </p>
+        <div class="skills-section">
+          <div class="skills-section-container">
+            <div class="skill-content ">
+              <img src="assets/html.png" alt="">
+              <h2>HTML</h2>
+              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <a href="">Learn More</a>
+            </div>
+          </div>
+          <div class="skills-section-container">
+            <div class="skill-content">
+              <img src="assets/css.png" alt="">
+              <h2>CSS</h2>
+              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <a href="">Learn More</a>
+            </div>
+          </div>
+          <div class="skills-section-container">
+            <div class="skill-content">
+              <img src="assets/js.png" alt="">
+              <h2>HTML</h2>
+              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <a href="">Learn More</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
