support-section-container

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
       </section>
       <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- -->
-      <!-- =-==-=-=-=-=-=-=-=My Current Target=-=-=-=-=-=-=- -->
+      <!-- =-==-=-=-=-=-=-=-=My Current Target Start Here=-=-=-=-=-=-=- -->
       <section class="target-section">
         <h1 class="title">My Current Target</h1>
         <p class="description">
@@ -141,6 +141,20 @@
           </div>
         </div>
       </section>
+            <!-- =-==-=-=-=-=-=-=-=My Current Target End Here=-=-=-=-=-=-=- -->
+
+            <!-- =-=-=-=-=-=-=-=-=-= Support- Section --=-=-=-=-=-=-=-=-=- -->
+       <section class="support-section-container">
+        <div class="support-section-container-content">
+          <h1>I need Support</h1>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+         <form class="form">
+            <input class="text" type="text" placeholder="Suggest me any feedback for me">
+            <input class="submit" type="submit" value="Submit">
+          </form>
+        </div>
+
+       </section>
     </main>
   </body>
 </html>
