main-project complete

--- a/index.html
+++ b/index.html
@@ -156,5 +156,19 @@
 
        </section>
     </main>
+    <!-- /* =-=-=-=-=-=-=-=-=-=-=-=--=-Footer_section Start Here=-=-=-=-=--=-=-=-=-=-=-=-=-=-=-=- */ -->
+
+    <footer class="footer-section">
+      <div class="footer-section-container" >
+        <div class="text">
+          <h3>An Open Commitment by Rima Sultana</h3>
+        </div>
+        <div class="social">
+          <img src="assets/facebook.png" alt="">
+          <img src="assets/github.png" alt="">
+          <img src="assets/linkedin-icon 1.png" alt="">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
