--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           Everything <br />
           can be achieved with hard work. Hard workers never fail
         </p>
-        <button><a class="btn" href="">Contact with me</a></button>
+      <a class="btn" href="#footer-section"><button>Contact with me</button></a>
       </div>
     </header>
     <!-- ==--==--==--=--==--== Banner Section End Here--==--==--==--==--==--== -->
@@ -58,11 +58,9 @@
             <img src="assets/Group 3.png" alt="" />
           </div>
           <div class="box-text-content">
-            <h2>I will Do Coding and Change The World</h2>
+            <h2>I will help People by creating Modern Web System</h2>
             <p>
-              I will be a good developer. Create new projects and
-              change the world
-            </p>
+              I will help people with my new developed web system. May they improve.            </p>
             <button class="btn-primary">Learn More</button>
           </div>
         </div>
@@ -111,62 +109,83 @@
       <section class="target-section">
         <h1 class="title">My Current Target</h1>
         <p class="description">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text.
+          My current goal is to start all web development tasks and learn html
+          css and javascript <br />
+          well. It will be very beneficial for me.
         </p>
         <div class="skills-section">
           <div class="skills-section-container">
-            <div class="skill-content ">
-              <img src="assets/html.png" alt="">
+            <div class="skill-content">
+              <img src="assets/html.png" alt="" />
               <h2>HTML</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing.</p>
-              <a href="">Learn More</a>
+              <p>HTML stands for Hyper Text Markup Language.</p>
+              <a href="https://www.w3schools.com/html/" target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
-          <div class="skills-section-container">
+          <div class="skills-section-container second">
             <div class="skill-content">
-              <img src="assets/css.png" alt="">
+              <img src="assets/css.png" alt="" />
               <h2>CSS</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing.</p>
-              <a href="">Learn More</a>
+              <p>CSS stands for Cascading Style Sheets.</p>
+              <a href="https://www.w3schools.com/css/" target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
-          <div class="skills-section-container">
+          <div class="skills-section-container third">
             <div class="skill-content">
-              <img src="assets/js.png" alt="">
+              <img src="assets/js.png" alt="" />
               <h2>HTML</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing.</p>
-              <a href="">Learn More</a>
+              <p>JavaScript can update and change both HTML and CSS.</p>
+              <a href="https://www.w3schools.com/js/" target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
         </div>
       </section>
-            <!-- =-==-=-=-=-=-=-=-=My Current Target End Here=-=-=-=-=-=-=- -->
+      <!-- =-==-=-=-=-=-=-=-=My Current Target End Here=-=-=-=-=-=-=- -->
 
-            <!-- =-=-=-=-=-=-=-=-=-= Support- Section --=-=-=-=-=-=-=-=-=- -->
-       <section class="support-section-container">
+      <!-- =-=-=-=-=-=-=-=-=-= Support- Section --=-=-=-=-=-=-=-=-=- -->
+      <section class="support-section-container">
         <div class="support-section-container-content">
           <h1>I need Support</h1>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-         <form class="form">
-            <input class="text" type="text" placeholder="Suggest me any feedback for me">
-            <input class="submit" type="submit" value="Submit">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <form class="form">
+            <input
+              class="text"
+              type="text"
+              placeholder="Suggest me any feedback for me"
+            />
+            <input class="submit" type="submit" value="Submit" />
           </form>
         </div>
-
-       </section>
+      </section>
     </main>
     <!-- /* =-=-=-=-=-=-=-=-=-=-=-=--=-Footer_section Start Here=-=-=-=-=--=-=-=-=-=-=-=-=-=-=-=- */ -->
 
-    <footer class="footer-section">
-      <div class="footer-section-container" >
+    <footer id="footer-section">
+      <div class="footer-section-container">
         <div class="text">
           <h3>An Open Commitment by Rima Sultana</h3>
         </div>
         <div class="social">
-          <img src="assets/facebook.png" alt="">
-          <img src="assets/github.png" alt="">
-          <img src="assets/linkedin-icon 1.png" alt="">
+          <a href="https://www.facebook.com/?_rdc=1&_rdr" target="_blank"
+            ><img src="assets/facebook.png" alt=""
+          /></a>
+          <a href="https://github.com/rimasultana" target="_blank"
+            ><img src="assets/github.png" alt=""
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/rima-sultana-040928317/"
+            target="_blank"
+            ><img src="assets/linkedin-icon 1.png" alt="" />
+          </a>
         </div>
       </div>
     </footer>
