--- a/index.html
+++ b/index.html
@@ -20,73 +20,80 @@
           Everything <br />
           can be achieved with hard work. Hard workers never fail
         </p>
-      <a class="btn" href="#footer-section"><button>Contact with me</button></a>
+        <a class="btn" href="#footer-section"
+          ><button>Contact with me</button></a
+        >
       </div>
     </header>
     <!-- ==--==--==--=--==--== Banner Section End Here--==--==--==--==--==--== -->
     <main>
       <!-- ==--=--==--==--==--==--==- Web Development Start Here??-==--=---==--==---==--==--=== -->
       <section class="Development-section">
-        <div class="content">
-          <h1 class="title">Why Web Development??</h1>
-          <p class="description">
-            My childhood dream is web development. I have a special love for web
-            development. <br />
-            Wants to be a good developer, wants to move forward with his dreams
-          </p>
-        </div>
-
-        <div class="box-container">
-          <!-- =-=-=-=-=-=box-container-1=-=-=-=-=-=- -->
-          <div class="box-text-content">
-            <h2>I will Do Coding and Change The World</h2>
+        <div class="Development-section-container">
+          <div class="content">
+            <h1>Why Web Development??</h1>
             <p>
-              I will be a good developer. Create new projects and
-              change the world
+              My childhood dream is web development. I have a special love for
+              web development. <br />
+              Wants to be a good developer, wants to move forward with his
+              dreams
             </p>
-            <button class="btn-primary">Learn More</button>
           </div>
-          <div class="box-img">
-            <img src="assets/Layer_1.png" alt="" />
-          </div>
-        </div>
-        <!-- =-=-=-=-=-=box-container-1 Ene Here =-=-=-=-=-=- -->
 
-        <!-- =-=-=-=-=-=box-container-2 Start Here =-=-=-=-=-=- -->
-        <div class="box-container">
-          <div class="box-img">
-            <img src="assets/Group 3.png" alt="" />
+          <div class="box-container">
+            <!-- =-=-=-=-=-=box-container-1=-=-=-=-=-=- -->
+            <div class="box-text-content">
+              <h2>I will Do Coding and Change The World</h2>
+              <p>
+                I will be a good developer. Create new projects and
+                change the world
+              </p>
+              <button class="btn-primary">Learn More</button>
+            </div>
+            <div class="box-img">
+              <img src="assets/Layer_1.png" alt="" />
+            </div>
           </div>
-          <div class="box-text-content">
-            <h2>I will help People by creating Modern Web System</h2>
-            <p>
-              I will help people with my new developed web system. May they improve.            </p>
-            <button class="btn-primary">Learn More</button>
-          </div>
-        </div>
-        <!-- =-=-=-=-=-=box-container-2 End Here =-=-=-=-=-=- -->
+          <!-- =-=-=-=-=-=box-container-1 Ene Here =-=-=-=-=-=- -->
 
-        <!-- =-=-=-=-=-=box-container-3 Start Here =-=-=-=-=-=- -->
-        <div class="box-container">
-          <div class="box-text-content">
-            <h2>I will Do Coding and Change The World</h2>
-            <p>
-              I will be a good developer. Create new projects and
-              change the world
-            </p>
-            <button class="btn-primary">Learn More</button>
+          <!-- =-=-=-=-=-=box-container-2 Start Here =-=-=-=-=-=- -->
+          <div class="box-container second-box">
+            <div class="box-img">
+              <img src="assets/Group 3.png" alt="" />
+            </div>
+            <div class="box-text-content second-box-content">
+              <h2>I will help People by creating Modern Web System</h2>
+              <p>
+                I will help people with my new developed web system.
+                May they improve.
+              </p>
+              <button class="btn-primary">Learn More</button>
+            </div>
           </div>
-          <div class="box-img">
-            <img src="assets/Group 4.png" alt="" />
-          </div>
+          <!-- =-=-=-=-=-=box-container-2 End Here =-=-=-=-=-=- -->
+
+          <!-- =-=-=-=-=-=box-container-3 Start Here =-=-=-=-=-=- -->
+           <div class="box-container third-box"> 
+            <div class="box-text-content">
+              <h2>I will Do Coding and Change The World</h2>
+              <p>
+                I will be a good developer. Create new projects and
+                change the world
+              </p>
+              <button class="btn-primary">Learn More</button>
+            </div>
+            <div class="box-img">
+              <img src="assets/Group 4.png" alt="" />
+            </div>
+          </div> 
         </div>
         <!-- =-=-=-=-=-=box-container-3 End Here=-=-=-=-=-=- -->
       </section>
 
       <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration=-=-=-=-=-=-=-=-=-=-=-=- -->
       <section class="Inspiration-section">
-        <h1 class="title">My Inspiration</h1>
-        <p class="description">
+        <h1 class="Inspiration-section-title">My Inspiration</h1>
+        <p class="Inspiration-section-description">
           My childhood dream is web development. I have a special love for web
           development. <br />
           Wants to be a good developer, wants to move forward with his dreams
@@ -107,8 +114,8 @@
       <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- -->
       <!-- =-==-=-=-=-=-=-=-=My Current Target Start Here=-=-=-=-=-=-=- -->
       <section class="target-section">
-        <h1 class="title">My Current Target</h1>
-        <p class="description">
+        <h1 class="target-section-title">My Current Target</h1>
+        <p class="target-section-description">
           My current goal is to start all web development tasks and learn html
           css and javascript <br />
           well. It will be very beneficial for me.
@@ -130,7 +137,7 @@
               <h2>CSS</h2>
               <p>CSS stands for Cascading Style Sheets.</p>
               <a href="https://www.w3schools.com/css/" target="_blank"
-                >Learn More</a
+                >Learn More</a>
               >
             </div>
           </div>
