--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>First-Assignment</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
@@ -57,7 +57,7 @@
           <!-- =-=-=-=-=-=box-container-1 Ene Here =-=-=-=-=-=- -->
 
           <!-- =-=-=-=-=-=box-container-2 Start Here =-=-=-=-=-=- -->
-          <div class="box-container second-box">
+          <div class="box-container">
             <div class="box-img">
               <img src="assets/Group 3.png" alt="" />
             </div>
@@ -73,7 +73,7 @@
           <!-- =-=-=-=-=-=box-container-2 End Here =-=-=-=-=-=- -->
 
           <!-- =-=-=-=-=-=box-container-3 Start Here =-=-=-=-=-=- -->
-           <div class="box-container third-box"> 
+          <div class="box-container third-box">
             <div class="box-text-content">
               <h2>I will Do Coding and Change The World</h2>
               <p>
@@ -85,7 +85,7 @@
             <div class="box-img">
               <img src="assets/Group 4.png" alt="" />
             </div>
-          </div> 
+          </div>
         </div>
         <!-- =-=-=-=-=-=box-container-3 End Here=-=-=-=-=-=- -->
       </section>
@@ -98,17 +98,20 @@
           development. <br />
           Wants to be a good developer, wants to move forward with his dreams
         </p>
-        <div class="video">
-          <iframe
-            width="1000px"
-            height="500px"
-            src="https://www.youtube.com/embed/-RVlkAYAcRA?si=S5SInzgdx5F6PvW0"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
+        <div class="video-cintainer">
+          <div class="video">
+            <iframe
+              class="video-border"
+              width="1000px"
+              height="500px"
+              src="https://www.youtube.com/embed/-RVlkAYAcRA?si=S5SInzgdx5F6PvW0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
       </section>
       <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- -->
@@ -120,35 +123,32 @@
           css and javascript <br />
           well. It will be very beneficial for me.
         </p>
-        <div class="skills-section">
-          <div class="skills-section-container">
-            <div class="skill-content">
+        <div class="card-section">
+          <div class="card-section-container-1">
+            <div class="card-item">
               <img src="assets/html.png" alt="" />
               <h2>HTML</h2>
               <p>HTML stands for Hyper Text Markup Language.</p>
               <a href="https://www.w3schools.com/html/" target="_blank"
-                >Learn More</a
-              >
+                >Learn More</a>
             </div>
           </div>
-          <div class="skills-section-container second">
-            <div class="skill-content">
+          <div class="card-section-container-2">
+            <div class="card-item">
               <img src="assets/css.png" alt="" />
               <h2>CSS</h2>
               <p>CSS stands for Cascading Style Sheets.</p>
               <a href="https://www.w3schools.com/css/" target="_blank"
                 >Learn More</a>
-              >
             </div>
           </div>
-          <div class="skills-section-container third">
-            <div class="skill-content">
+          <div class="card-section-container-3">
+            <div class="card-item">
               <img src="assets/js.png" alt="" />
               <h2>HTML</h2>
               <p>JavaScript can update and change both HTML and CSS.</p>
               <a href="https://www.w3schools.com/js/" target="_blank"
-                >Learn More</a
-              >
+                >Learn More</a>
             </div>
           </div>
         </div>
@@ -160,8 +160,7 @@
         <div class="support-section-container-content">
           <h1>I need Support</h1>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry.
+            I am a learner. Help to move forward. To become a better developer in future.
           </p>
           <form class="form">
             <input
