--- a/index.html
+++ b/index.html
@@ -8,23 +8,37 @@
   </head>
   <body>
     <!-- ==--==--==--=--==--== Banner Section Stat Here--==--==--==--==--==--== -->
-    <header class="banner-section">
-      <div class="banner-section-container">
-        <img src="assets/Group.png" alt="" />
-        <h1>
-          "In the near future, I hope to become a <br />
-          Developer."
-        </h1>
-        <p>
-          I have confidence in myself. I will be successful one day inshallah.
-          Everything <br />
-          can be achieved with hard work. Hard workers never fail
-        </p>
-        <a class="btn" href="#footer-section"
-          ><button>Contact with me</button></a
-        >
-      </div>
+    <header>
+      <nav class="menu-section">
+        <ul>
+          <li><a href="#">Rima.S</a></li>
+          <li>
+            <button><a href="#">Download Resume</a></button>
+          </li>
+        </ul>
+      </nav>
     </header>
+    <section class="banner-section">
+      <div class="banner-container">
+        <div class="banner-title">
+          <div class="image">
+            <img src="assets/Group.png" alt="devoloper-pic" />
+          </div>
+          <div class="banner-title-text">
+            <h1>"In the near future, I hope to become a Developer."</h1>
+            <p class="banner-description-text">
+              I have confidence in myself. I will be successful one day
+              inshallah. Everything <br />
+              can be achieved with hard work. Hard workers never fail.
+            </p>
+            <button>
+              <a class="btn" href="#footer-section">Contact with me</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ==--==--==--=--==--== Banner Section End Here--==--==--==--==--==--== -->
     <main>
       <!-- ==--=--==--==--==--==--==- Web Development Start Here??-==--=---==--==---==--==--=== -->
@@ -102,9 +116,9 @@
           <div class="video">
             <iframe
               class="video-border"
-              width="1000px"
-              height="500px"
-              src="https://www.youtube.com/embed/-RVlkAYAcRA?si=S5SInzgdx5F6PvW0"
+              width="1000"
+              height="500"
+              src="https://www.youtube.com/embed/Jj1DnFeb8wU?si=2giCge91okIz0IBQ"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -130,7 +144,8 @@
               <h2>HTML</h2>
               <p>HTML stands for Hyper Text Markup Language.</p>
               <a href="https://www.w3schools.com/html/" target="_blank"
-                >Learn More</a>
+                >Learn More</a
+              >
             </div>
           </div>
           <div class="card-section-container-2">
@@ -139,7 +154,8 @@
               <h2>CSS</h2>
               <p>CSS stands for Cascading Style Sheets.</p>
               <a href="https://www.w3schools.com/css/" target="_blank"
-                >Learn More</a>
+                >Learn More</a
+              >
             </div>
           </div>
           <div class="card-section-container-3">
@@ -148,19 +164,32 @@
               <h2>HTML</h2>
               <p>JavaScript can update and change both HTML and CSS.</p>
               <a href="https://www.w3schools.com/js/" target="_blank"
-                >Learn More</a>
+                >Learn More</a
+              >
             </div>
           </div>
         </div>
       </section>
       <!-- =-==-=-=-=-=-=-=-=My Current Target End Here=-=-=-=-=-=-=- -->
+      <!-- =-=-=-=-=-=-=-=- My Next Target Start Here =-=-=-=-=-=-=-=-=-=- -->
+      <section class="future-section">
+        <h1 class="h1">My Next Target</h1>
+        <p class="p">
+          I will be a good web developer. Then you have to work hard. Because
+          hard work never fails
+        </p>
+        <div class="skills-container"></div>
+      </section>
+
+      <!-- =-=-=-=-=-=-=-=- My Next Target Start Here =-=-=-=-=-=-=-=-=-=- -->
 
       <!-- =-=-=-=-=-=-=-=-=-= Support- Section --=-=-=-=-=-=-=-=-=- -->
       <section class="support-section-container">
         <div class="support-section-container-content">
           <h1>I need Support</h1>
           <p>
-            I am a learner. Help to move forward. To become a better developer in future.
+            I am a learner. Help to move forward. To become a better
+            developer in future.
           </p>
           <form class="form">
             <input
