--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- ==--==--==--=--==--== Banner Section End Here--==--==--==--==--==--== -->
     <main>
-      <!-- ==--=--==--==--==--==--==- Web Development Start Here??-==--=---==--==---==--==--=== -->
+      <!-- ==--=--==--==--==--==--==- Web Development Start Here??-==--=---==-= -->
       <section class="Development-section">
         <div class="Development-section-container">
           <div class="content">
@@ -128,7 +128,7 @@
           </div>
         </div>
       </section>
-      <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- -->
+      <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-= -->
       <!-- =-==-=-=-=-=-=-=-=My Current Target Start Here=-=-=-=-=-=-=- -->
       <section class="target-section">
         <h1 class="target-section-title">My Current Target</h1>
@@ -171,18 +171,7 @@
         </div>
       </section>
       <!-- =-==-=-=-=-=-=-=-=My Current Target End Here=-=-=-=-=-=-=- -->
-      <!-- =-=-=-=-=-=-=-=- My Next Target Start Here =-=-=-=-=-=-=-=-=-=- -->
-      <section class="future-section">
-        <h1 class="h1">My Next Target</h1>
-        <p class="p">
-          I will be a good web developer. Then you have to work hard. Because
-          hard work never fails
-        </p>
-        <div class="skills-container"></div>
-      </section>
-
-      <!-- =-=-=-=-=-=-=-=- My Next Target Start Here =-=-=-=-=-=-=-=-=-=- -->
-
+     
       <!-- =-=-=-=-=-=-=-=-=-= Support- Section --=-=-=-=-=-=-=-=-=- -->
       <section class="support-section-container">
         <div class="support-section-container-content">
@@ -202,7 +191,7 @@
         </div>
       </section>
     </main>
-    <!-- /* =-=-=-=-=-=-=-=-=-=-=-=--=-Footer_section Start Here=-=-=-=-=--=-=-=-=-=-=-=-=-=-=-=- */ -->
+    <!-- /* =-=-=-=-=-=--=-Footer_section Start Here=-==-=-=-=-=- */ -->
 
     <footer id="footer-section">
       <div class="footer-section-container">
@@ -224,5 +213,6 @@
         </div>
       </div>
     </footer>
+    <!-- /* =-=-=-=-=-=--=-Footer_section End Here=-==-=-=-=-=- */ -->
   </body>
 </html>
