--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 I will be a good developer. Create new projects and
                 change the world
               </p>
-              <button class="btn-primary">Learn More</button>
+              <button class="btn-primary"><a href="https://www.w3schools.com/">Learn More</a></button>
             </div>
             <div class="box-img">
               <img src="assets/Layer_1.png" alt="" />
@@ -81,7 +81,7 @@
                 I will help people with my new developed web system.
                 May they improve.
               </p>
-              <button class="btn-primary">Learn More</button>
+              <button class="btn-primary"><a href="https://www.w3schools.com/">Learn More</a></button>
             </div>
           </div>
           <!-- =-=-=-=-=-=box-container-2 End Here =-=-=-=-=-=- -->
@@ -94,7 +94,7 @@
                 I will be a good developer. Create new projects and
                 change the world
               </p>
-              <button class="btn-primary">Learn More</button>
+              <button class="btn-primary"> <a href="https://www.w3schools.com/">Learn More</a></button>
             </div>
             <div class="box-img">
               <img src="assets/Group 4.png" alt="" />
