--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First-Assignment</title>
+    <link rel="stylesheet" href="style/responsive.css" />
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
@@ -11,9 +12,9 @@
     <header>
       <nav class="menu-section">
         <ul>
-          <li><a href="#">Rima.S</a></li>
+          <li>Rima.S</li>
           <li>
-            <button><a href="#">Download Resume</a></button>
+            <button class="btn-btn"><a href="#">Download Resume</a></button>
           </li>
         </ul>
       </nav>
@@ -55,46 +56,49 @@
           </div>
 
           <div class="box-container">
-            <!-- =-=-=-=-=-=box-container-1=-=-=-=-=-=- -->
             <div class="box-text-content">
               <h2>I will Do Coding and Change The World</h2>
               <p>
                 I will be a good developer. Create new projects and
                 change the world
               </p>
-              <button class="btn-primary"><a href="https://www.w3schools.com/">Learn More</a></button>
+              <button class="btn-primary">
+                <a href="https://www.w3schools.com/">Learn More</a>
+              </button>
             </div>
             <div class="box-img">
               <img src="assets/Layer_1.png" alt="" />
             </div>
           </div>
-          <!-- =-=-=-=-=-=box-container-1 Ene Here =-=-=-=-=-=- -->
 
           <!-- =-=-=-=-=-=box-container-2 Start Here =-=-=-=-=-=- -->
-          <div class="box-container">
+          <div class="box-container second-box">
             <div class="box-img">
               <img src="assets/Group 3.png" alt="" />
             </div>
-            <div class="box-text-content second-box-content">
+            <div class="box-text-content">
               <h2>I will help People by creating Modern Web System</h2>
               <p>
                 I will help people with my new developed web system.
                 May they improve.
               </p>
-              <button class="btn-primary"><a href="https://www.w3schools.com/">Learn More</a></button>
+              <button class="btn-primary">
+                <a href="https://www.w3schools.com/">Learn More</a>
+              </button>
             </div>
           </div>
-          <!-- =-=-=-=-=-=box-container-2 End Here =-=-=-=-=-=- -->
 
           <!-- =-=-=-=-=-=box-container-3 Start Here =-=-=-=-=-=- -->
-          <div class="box-container third-box">
+          <div class="box-container">
             <div class="box-text-content">
               <h2>I will Do Coding and Change The World</h2>
               <p>
                 I will be a good developer. Create new projects and
                 change the world
               </p>
-              <button class="btn-primary"> <a href="https://www.w3schools.com/">Learn More</a></button>
+              <button class="btn-primary">
+                <a href="https://www.w3schools.com/">Learn More</a>
+              </button>
             </div>
             <div class="box-img">
               <img src="assets/Group 4.png" alt="" />
